# bevy-minesweeper

./: Cargo.toml
.github/workflows/: release.yaml
src/: bounds2.rs  main.rs  tile.rs  tile_map.rs
src/board/: board.rs  board_changed.rs  board_plugin.rs  flag.rs  mod.rs  settings.rs  sprites.rs  tile_cover.rs  tile_map.rs
src/board/tile/: mod.rs  tile.rs  tile_state.rs  tile_type.rs
src/components/: coordinates.rs  mod.rs  tile.rs
src/ui/: menu_data.rs  mod.rs  settings.rs  ui_plugin.rs
src/utils/: app_state.rs  mod.rs  tile_map.rs
